--- a/app/static/auth_yandex.html
+++ b/app/static/auth_yandex.html
@@ -20,9 +20,9 @@
       window.YaAuthSuggest.init({
                   client_id: '404ab7886ee84710b17d84490de832c2',
                   response_type: 'token',
-                  redirect_uri: 'https://examplesite.com/suggest/token'
+                  redirect_uri: 'https://api.lyrics.sslane.ru/auth/yandex_token'
                },
-               'https://examplesite.com/', {
+               'https://api.lyrics.sslane.ru/', {
                   view: 'button',
                   parentId: 'container',
                   buttonView: 'main',
