--- a/app/static/auth_yandex.html
+++ b/app/static/auth_yandex.html
@@ -20,7 +20,7 @@
       window.YaAuthSuggest.init({
                   client_id: '404ab7886ee84710b17d84490de832c2',
                   response_type: 'token',
-                  redirect_uri: 'https://api.lyrics.sslane.ru/auth/yandex_token'
+                  redirect_uri: 'https://api.lyrics.sslane.ru/static/auth_yandex_redirect.html',
                },
                'https://api.lyrics.sslane.ru/', {
                   view: 'button',
